css/style.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Titillium Web', serif;
  background: black;
}

#map {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
}

#info {
  z-index: 1002;
  position: absolute;
  width: 500px;
  top: 1%;
  bottom: 1%;
  left: .5%;
  padding: 40px 15px 900px 15px;
  background: #555B6E;
  color: #CAF7E2;
}

/* social media icons */
#socials {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  gap: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 12.5px;
  margin-right: 32px;
}

#info a {
  color: lightgray;
}

#info a:hover {
  color: white;
  opacity: 0.3;
}

#reset {
  margin-left: auto;
}

#reset a {
  color: #EF8354;
}

#title {
  font-size: 25px;
  font-family: 'Oswald', sans-serif;
  margin: auto;
  width: 95%;
}

/* social media icons */
#title span {
  font-size: 14px;
  float: right;
  margin-right: 10px;
}

/* card decks */
.chart-title {
  text-align: center;
  color: #CAF7E2;
  font-size: medium;
  font-weight: bold;
  margin-top: 0px;
  margin-bottom: 0px;
}

.chart-desc {
  color: #62b9a3;
  font-size: 13px;
  margin: 0 32px 0 12.5px;
}

#footer {
  position: absolute;
  bottom: 0px;
  margin-bottom: 20px;
  margin-left: 12.5px;
  margin-right: 32px;
  font-size: 13px;
  line-height: 150%;
  color: #BFACC8;
}

/* the layout of the legend panel */
#legend {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 110px;
  background: lightslategrey;
  margin-right: 20px;
  margin-bottom: 20px;
  padding: 10px 20px 10px 10px;
  border-radius: 3px;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
}

/* each line for a break */
.break {
  position: relative;
  margin: 0px;
  padding: 0px;
}

/* basic style for a dot/circle */
.dot {
  display: inline-block;
  margin-top: 5px;
  border-radius: 50%;
  opacity: 0.6;
}

/* the label for the dot */
.dot-label {
  position: absolute;
  top: 0;
  right: 0;
  font-style: italic;
}

/* bar chart */
text {
  fill: lightgray;
}

.tick line {
  stroke: gray;
}

.c3-axis path {
  stroke: gray;
}

.name,
.value {
  background-color: black;
  color: black
}

#count {
  display: flex;
  justify-content: center;
}

#count p {
  margin: 0;
}

#chart-axis {
  text-align: center;
  color: lightgray;
  margin: 0;
}

#pov-section {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

#pov_chart {
  position: relative;
  left: -138px;
}

#pov-desc {
  position: absolute;
  width: 220px;
  margin-top: 100px;
}

#legend2 {
  position: absolute;
  bottom: 20px;
  left: 63%; /* Adjust the left position to move the legend more to the left */
  transform: translateX(-50%);
  background-color: lightslategrey;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  padding: 4px;
  z-index: 1000;
  display: flex;
  justify-content: center;
  width: auto;
  font-family: 'Open Sans', sans-serif;
}

.legend-item {
  display: flex;
  align-items: center;
  margin: 0 6px;
}

.legend-key {
  width: 12px;
  height: 12px;
  margin-right: 2px;
}

.legend-key span {
  font-size: 8px;
}

.legend-item span {
  margin-left: 2px;
}

.legend-title {
  margin-left: 10px; /* Adjust the margin between title and legend items */
  font-family: 'Open Sans', sans-serif;
  color: #000000;
  font-size: medium;
  font-weight: bold;
}



#sidebar {
  width: 200px;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #f0f0f0;
  padding: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}


.sidebar-button {
  margin-top: 40px;
  width: 20%;
  background-color: #007bff00;
  color: #62b9a3;
  text-align: center;
  border: none;
  margin-bottom: 10px;
  cursor: pointer;
  border-radius: 5px;
  margin-left: 93px;

}


.sidebar-button:hover {
  background-color: #000000;
}

.legend2 .legend-source a {
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  color: #000000;
  font-size: medium;
  font-weight: bold;
  text-decoration: none; /* Optional: Remove underline */; /* Adjust margin as needed to align horizontally with the legend items */
  display: flex;
  align-items: center; /* Align content vertically */

}

.legend-source a {
  margin: 5px;
}


#filters {
  position: absolute;
  display: flex;
  flex-direction: column;
  bottom: 320px;
  right: 0;
  width: 120px;
  background: lightslategrey;
  margin-right: 20px;
  padding: 10px 10px 10px 10px;
  border-radius: 3px;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
}

#filters div {
  text-align: left;
  font-size: 11px;
}

